<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/v"
        android:orientation="horizontal">

        <TextView
            style="@style/text_button"
            android:text="@string/app_name"
            android:layout_weight="1.0"
            android:background="@color/green_200"
            android:onClick="changeToMy"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            style="@style/text_button"
            android:text="@string/allC"
            android:layout_weight="1.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/v">

        <TextView
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            style="@style/course_banner1"
            android:textSize="24sp"
            android:padding="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_200" />

        <TextView
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            style="@style/course_banner1"
            android:textSize="24sp"
            android:padding="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_200" />

        <TextView
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b3"
            style="@style/course_banner1"
            android:textSize="24sp"
            android:padding="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_200" />

        <TextView
            android:id="@+id/b4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b4"
            style="@style/course_banner1"
            android:textSize="24sp"
            android:padding="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_200" />

        <TextView
            android:id="@+id/b5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b5"
            style="@style/course_banner1"
            android:textSize="24sp"
            android:padding="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_200" />


    </LinearLayout>

</RelativeLayout>